# osu-wiki-preview

./: .gitignore  .prettierrc  README.md  app.py  package.json  pyproject.toml  requirements.txt  rspack.config.js  tsconfig.json  webpack.config.js
app/: __init__.py  __main__.py  git_repo.py  language_list.py  list_tree.py  markdown_converter.py  run_checks.py  toc.py
app/meta/: config.py  languages.py
app/plugins/: anchors.py  figure.py  osu_list.py
app/routes/: assets.py  wiki.py  wiki_tools.py
app/templates/: not-found.jinja  osu-wiki-tools.jinja  wiki.jinja
app/templates/includes/: branches.jinja  file-edits.jinja  front-matter.jinja  lang-selector.jinja
functions/: generate_toc.py  get_flag_codepoint.py  git.py  html_add_figure_caption.py  html_modify_content.py  language_list.py  list_tree.py  markdown_converter.py  mdit_anchors.py  mdit_inline_flags.py  mdit_token_classes.py  process_console_output.py
meta/: config.py  languages.py
plugins/: figure.py  flag.py  osu_footnote.py  osu_list.py
resources/css/: app.less  base.less  bem-index.less  bootstrap-variables.less  colors.less  functions.less  layout.less  sections.less  utilities.less  variables.less
resources/js/: dom.d.ts  hide-all-menus.js  index.js  index.ts  menus.js  nav.js  osu-core.ts  setup-menus.js  setup-tooltips.js  slide.js
routes/: wiki.py  wiki_tools.py
scripts/: generate_toc.py  get_article_title.py  git.py  git_repo.py  html_modify_content.py  language_list.py  list_tree.py  markdown_converter.py  process_console_output.py  run_checks.py  toc.py
templates/: lang-selector.jinja  main-page.html  main-page.jinja  not-found.jinja  osu-page.jinja  osu-wiki-tools.html  osu-wiki-tools.jinja  wiki.html  wiki.jinja
templates/includes/: front-matter.jinja  lang-selector.jinja  sidebar.jinja
templates/layouts/: osu-layout.jinja
(+31 files in other folders)
