[project]
name = "osu-wiki-preview"
version = "0.1.0"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "gitpython>=3.1.43",
    "humanize>=4.11.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "osu-wiki-tools>=2.3.2",
    "pyyaml>=6.0.1",
    "quart>=0.19.6",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.uv]
dev-dependencies = ["types-beautifulsoup4>=4.12.0.20240907"]
